--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,16 +12,18 @@
     href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Poppins:ital,wght@1,500&family=Rubik+Doodle+Shadow&display=swap"
     rel="stylesheet" />
 </head>
+
 <body>
   <div class="cont">
     <div id="menus">
       <h1>MENU</h1>
       <div id="menu">
         <input type="tel" name="" id="search" placeholder="search" />
-        <span id="menuicon"><img src="\todolist\menu.png" alt="" /></span>
+        
       </div>
       <h2>Tasks</h2>
-      <ul id="tasklist"></ul>
+        <ul id="tasklist">
+        </ul>
     </div>
     <div id="main">
       <h1 id="mainheading">To-Do-List</h1>
@@ -28,8 +31,12 @@
       <textarea name="" id="" cols="20" rows="2" class="showtask"></textarea>
       <img src="\todolist\plus.png" width="" alt="" id="add" />
       <img src="\todolist\trash-2.png" alt="" id="deletebutton" />
+      <div id="bigtext">Click on the list item to show here</div>
+      
     </div>
+
   </div>
   <script src="script.js"></script>
 </body>
+
 </html>
